--- a/app/src/main/res/layout/activity_company_profile.xml
+++ b/app/src/main/res/layout/activity_company_profile.xml
@@ -84,17 +84,24 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:paddingTop="15dp"
-                                android:paddingBottom="20dp">
+                                android:paddingBottom="15dp"
+                                android:paddingTop="15dp">
 
                                 <de.hdodenhof.circleimageview.CircleImageView
                                     android:id="@+id/company_pfle_logo"
                                     android:layout_width="150dp"
                                     android:layout_height="match_parent"
                                     android:scaleType="centerCrop"
+                                    android:transitionName="image_trans"
                                     android:src="@drawable/profile_icon"
                                     app:civ_border_color="@color/light_black"
                                     app:civ_border_width="2dp" />
+
+                                <!--<ImageView-->
+                                    <!--android:id="@+id/company_pfle_logo"-->
+                                    <!--android:layout_width="95dp"-->
+                                    <!--android:layout_height="75dp"-->
+                                    <!--android:layout_marginTop="50dp"/>-->
 
                                 <!--<de.hdodenhof.circleimageview.CircleImageView-->
                                     <!--android:id="@+id/company_pfle_logo"-->
@@ -135,7 +142,6 @@
                         android:textColor="@color/black"
                         android:textSize="@dimen/heading" />
 
-
                     <TextView
                         android:id="@+id/edit_click"
                         android:layout_width="0dp"
@@ -143,6 +149,8 @@
                         android:layout_weight="1.0"
                         android:fontFamily="sans-serif-medium"
                         android:text="Edit"
+                        android:layout_marginRight="15dp"
+                        android:textSize="@dimen/activity_horizontal_margin"
                         android:textAlignment="textEnd"
                         android:textColor="@color/blue" />
 
