--- a/app/src/main/res/layout/admin_company_list_all.xml
+++ b/app/src/main/res/layout/admin_company_list_all.xml
@@ -30,6 +30,7 @@
                     android:layout_height="60dp"
                     android:layout_margin="10dp"
                     android:scaleType="centerCrop"
+                    android:transitionName="image_trans"
                     app:civ_border_color="@color/light_black"
                     app:civ_border_width="2dp" />
 
