--- a/app/src/main/res/layout/fragment_compnay_list_suspend.xml
+++ b/app/src/main/res/layout/fragment_compnay_list_suspend.xml
@@ -5,10 +5,19 @@
     tools:context=".SuperAdmin.Fragments.CompnayListSuspend">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/company_Suspend_records_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Suspend" />
+        android:src="@drawable/norecordsfound"
+        android:padding="65dp"
+        android:visibility="gone" />
+
+    </RelativeLayout>
 
 </FrameLayout>
