--- a/app/src/main/res/layout/fragment_company_list_on_hold.xml
+++ b/app/src/main/res/layout/fragment_company_list_on_hold.xml
@@ -5,10 +5,18 @@
     tools:context=".SuperAdmin.Fragments.CompanyListOnHold">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/company_Hold_records_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Hold" />
+        android:src="@drawable/norecordsfound"
+        android:padding="65dp"
+        android:visibility="gone" />
+
+    </RelativeLayout>
 
 </FrameLayout>
