--- a/app/src/main/res/layout/fragment_compny_list_all.xml
+++ b/app/src/main/res/layout/fragment_compny_list_all.xml
@@ -1,242 +1,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".SuperAdmin.Fragments.CompnyListAll">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/company_list_all_recycler_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/company_all_records_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/norecordsfound"
+            android:padding="65dp"
+            android:visibility="gone" />
 
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:id="@+id/comapny_list_btn"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginLeft="5dp"-->
-        <!--android:layout_marginRight="5dp"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--card_view:cardBackgroundColor="@color/white"-->
-        <!--card_view:cardElevation="10dp">-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/company_list_all_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="horizontal">-->
-
-            <!--<RelativeLayout-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content">-->
-
-                <!--<ImageView-->
-                    <!--android:layout_width="50dp"-->
-                    <!--android:layout_height="50dp"-->
-                    <!--android:layout_margin="10dp"-->
-                    <!--android:background="@drawable/circle"-->
-                    <!--android:backgroundTint="#3bae9c" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_centerHorizontal="true"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:text="A"-->
-                    <!--android:textColor="@color/white"-->
-                    <!--android:textSize="30dp" />-->
-
-            <!--</RelativeLayout>-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center"-->
-                <!--android:orientation="vertical">-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="autorox"-->
-                    <!--android:textColor="@color/light_black"-->
-                    <!--android:textSize="18dp" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="support@autorox.com"-->
-                    <!--android:textColor="@color/light_grey"-->
-                    <!--android:textSize="10dp" />-->
-
-            <!--</LinearLayout>-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:gravity="end">-->
-
-                <!--<ImageView-->
-                    <!--android:id="@+id/imageView"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:padding="15dp"-->
-                    <!--android:src="@drawable/right_arrow" />-->
-
-            <!--</LinearLayout>-->
-
-
-        <!--</LinearLayout>-->
-    <!--</android.support.v7.widget.CardView>-->
-
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginLeft="5dp"-->
-        <!--android:layout_marginRight="5dp"-->
-        <!--android:layout_marginTop="2dp"-->
-        <!--card_view:cardBackgroundColor="@color/white"-->
-        <!--card_view:cardElevation="10dp">-->
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="horizontal">-->
-
-            <!--<RelativeLayout-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content">-->
-
-                <!--<ImageView-->
-                    <!--android:layout_width="50dp"-->
-                    <!--android:layout_height="50dp"-->
-                    <!--android:layout_margin="10dp"-->
-                    <!--android:background="@drawable/circle"-->
-                    <!--android:backgroundTint="#327ad1" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_centerHorizontal="true"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:text="B"-->
-                    <!--android:textColor="@color/white"-->
-                    <!--android:textSize="30dp" />-->
-
-            <!--</RelativeLayout>-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center"-->
-                <!--android:orientation="vertical">-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="Beats Electronics"-->
-                    <!--android:textColor="@color/light_black"-->
-                    <!--android:textSize="18dp" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="support@beatmail.com"-->
-                    <!--android:textColor="@color/light_grey"-->
-                    <!--android:textSize="10dp" />-->
-
-            <!--</LinearLayout>-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:gravity="end">-->
-
-                <!--<ImageView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:padding="15dp"-->
-                    <!--android:src="@drawable/right_arrow" />-->
-
-            <!--</LinearLayout>-->
-        <!--</LinearLayout>-->
-    <!--</android.support.v7.widget.CardView>-->
-
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginLeft="5dp"-->
-        <!--android:layout_marginRight="5dp"-->
-        <!--android:layout_marginTop="2dp"-->
-        <!--card_view:cardBackgroundColor="@color/white"-->
-        <!--card_view:cardElevation="10dp">-->
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="horizontal">-->
-
-            <!--<RelativeLayout-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content">-->
-
-                <!--<ImageView-->
-                    <!--android:layout_width="50dp"-->
-                    <!--android:layout_height="50dp"-->
-                    <!--android:layout_margin="10dp"-->
-                    <!--android:background="@drawable/circle"-->
-                    <!--android:backgroundTint="#ac7f45" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_centerHorizontal="true"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:text="B"-->
-                    <!--android:textColor="@color/white"-->
-                    <!--android:textSize="30dp" />-->
-
-            <!--</RelativeLayout>-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center"-->
-                <!--android:orientation="vertical">-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="Beats Electronics"-->
-                    <!--android:textColor="@color/light_black"-->
-                    <!--android:textSize="18dp" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="support@beatmail.com"-->
-                    <!--android:textColor="@color/light_grey"-->
-                    <!--android:textSize="10dp" />-->
-
-            <!--</LinearLayout>-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:gravity="end">-->
-
-                <!--<ImageView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:padding="15dp"-->
-                    <!--android:src="@drawable/right_arrow" />-->
-
-            <!--</LinearLayout>-->
-
-        <!--</LinearLayout>-->
-    <!--</android.support.v7.widget.CardView>-->
-
+    </RelativeLayout>
 
 </LinearLayout>
