--- a/app/src/main/res/layout/activity_company_profile.xml
+++ b/app/src/main/res/layout/activity_company_profile.xml
@@ -8,39 +8,6 @@
     android:orientation="vertical"
     tools:context=".SuperAdmin.Activity.CompanyProfile">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            app:elevation="0dp">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/compny_prfle_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@drawable/gradient"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-        </android.support.design.widget.AppBarLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:fontFamily="sans-serif-smallcaps"
-            android:gravity="center"
-            android:text="Company Profile"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/twenty_size"
-            android:textStyle="bold" />
-
-    </RelativeLayout>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -53,7 +20,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:gravity="center">
 
                 <LinearLayout
@@ -71,60 +38,57 @@
 
                         <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_height="match_parent"
+                            android:gravity="center">
 
                             <ImageView
                                 android:id="@+id/company_cover_image"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
+                                android:alpha="0.4"
                                 android:scaleType="centerCrop"
-                                android:src="@drawable/profile_bg"
-                                android:alpha="0.4"/>
+                                android:src="@drawable/profile_bg" />
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:paddingBottom="15dp"
-                                android:paddingTop="15dp">
+                            <!--<LinearLayout-->
+                                <!--android:layout_width="match_parent"-->
+                                <!--android:layout_height="match_parent"-->
+                                <!--android:paddingBottom="15dp"-->
+                                <!--android:gravity="center_horizontal"-->
+                                <!--android:paddingTop="15dp">-->
 
-                                <de.hdodenhof.circleimageview.CircleImageView
-                                    android:id="@+id/company_pfle_logo"
-                                    android:layout_width="150dp"
-                                    android:layout_height="match_parent"
-                                    android:scaleType="centerCrop"
-                                    android:transitionName="image_trans"
-                                    android:src="@drawable/profile_icon"
-                                    app:civ_border_color="@color/light_black"
-                                    app:civ_border_width="2dp" />
+                                <!--&lt;!&ndash;<de.hdodenhof.circleimageview.CircleImageView&ndash;&gt;-->
+                                    <!--&lt;!&ndash;android:id="@+id/company_pfle_logo"&ndash;&gt;-->
+                                    <!--&lt;!&ndash;android:layout_width="150dp"&ndash;&gt;-->
+                                    <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
+                                    <!--&lt;!&ndash;android:scaleType="centerCrop"&ndash;&gt;-->
+                                    <!--&lt;!&ndash;android:transitionName="image_trans"&ndash;&gt;-->
+                                    <!--&lt;!&ndash;app:civ_border_color="@color/light_black"&ndash;&gt;-->
+                                    <!--&lt;!&ndash;app:civ_border_width="2dp" />&ndash;&gt;-->
 
-                                <!--<ImageView-->
-                                    <!--android:id="@+id/company_pfle_logo"-->
-                                    <!--android:layout_width="95dp"-->
-                                    <!--android:layout_height="75dp"-->
-                                    <!--android:layout_marginTop="50dp"/>-->
+                            <!--</LinearLayout>-->
 
-                                <!--<de.hdodenhof.circleimageview.CircleImageView-->
-                                    <!--android:id="@+id/company_pfle_logo"-->
-                                    <!--android:layout_width="150dp"-->
-                                    <!--android:layout_height="match_parent"-->
-                                    <!--android:layout_margin="10dp"-->
-                                    <!--android:scaleType="centerInside"-->
-                                    <!--android:src="@drawable/profile_icon"-->
-                                    <!--app:civ_border_color="@color/black"-->
-                                    <!--app:civ_border_width="2dp" />-->
 
-                            </LinearLayout>
 
                         </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
                 </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/company_pfle_logo"
+                    android:layout_width="150dp"
+                    android:layout_marginTop="50dp"
+                    android:scaleType="fitCenter"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/profile_icon"
+                    android:layout_height="wrap_content" />
             </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
                 android:orientation="vertical">
 
@@ -146,13 +110,13 @@
                         android:id="@+id/edit_click"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="15dp"
                         android:layout_weight="1.0"
                         android:fontFamily="sans-serif-medium"
                         android:text="Edit"
-                        android:layout_marginRight="15dp"
-                        android:textSize="@dimen/activity_horizontal_margin"
                         android:textAlignment="textEnd"
-                        android:textColor="@color/blue" />
+                        android:textColor="@color/blue"
+                        android:textSize="@dimen/activity_horizontal_margin" />
 
                 </LinearLayout>
 
@@ -424,4 +388,38 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize">
+
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            app:elevation="0dp">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/compny_prfle_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@drawable/gradient"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </android.support.design.widget.AppBarLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:fontFamily="sans-serif-smallcaps"
+            android:gravity="center"
+            android:text="Company Profile"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/twenty_size"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
 </LinearLayout>
