--- a/app/src/main/res/layout/fragment_compny_list_all.xml
+++ b/app/src/main/res/layout/fragment_compny_list_all.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     tools:context=".SuperAdmin.Fragments.CompnyListAll">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/company_list_all_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -26,5 +31,7 @@
             android:scrollbars="vertical" />
 
     </RelativeLayout>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
